--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://keukdong.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://keukdong.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: @ggasheaven #if your site has a twitter account, enter it here
 
 # Author Settings
