--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # this means to ignore newlines until "baseurl:"
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://keukdong.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: @ggasheaven #if your site has a twitter account, enter it here
+site-twitter: ggasheaven #if your site has a twitter account, enter it here
 
 # Author Settings
 author: keukdong(이상해씨++) # add your name
